<resources>
    <string name="app_name">HackNSIT</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Sign in.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signup_error_message">Please make sure you have entered a username, password and your full name!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you have entered a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="general_error_title">Oops!</string>
    <string name="general_error_message">Something went wrong!</string>
    <string name="facebook_app_id">426543440868826</string>
    <string name="message_hint">Send Anything!</string>
    <string name="send">Send</string>
    <string name="profile_other">Other profile picture</string>
    <string name="profile_me">My profile picture</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage!</string>
    <string name="general_error">Sorry! There was an error.</string>
    <string name="video_file_size_warning">Selected video should be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="start_private_chat_message">Are you sure you want to start a private chat with this user?</string>
    <string name="start_private_chat_label">Private Chat</string>
    <string name="hint_address">Address</string>
    <string name="upload_photo">Upload photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="content_description">This image view shows the image which has been chosen for upload.</string>
    <string name="address">Address</string>
    <string name="toast_msg">Input address and press upload button.</string>
    <string name="image_uploaded">Image Uploaded.</string>
    <string name="hint_phoneNumber">Phone Number</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="gallery">Open Gallery</string>
    <string name="camera">Open Camera</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="account_info">Account Balance :</string>
    <string name="add_money">ADD MONEY</string>
    <string name="ask_for_money">ASK FOR MONEY</string>
    <string name="add_money_dialog_title">"Enter the amount to be added: "</string>
    <string name="add_money_error_toast">"The value you entered is not valid. Please try again. "</string>
    <string name="available">AVAILABLE BALANCE</string>
    <string name="send_button">SEND</string>
    <string name="amount_label">AMOUNT</string>
    <string name="rupees">RS. </string>
    <string name="history_transaction">Transaction History</string>
    <string name="hint_pin">Pin</string>
    <string name="welcome_msg">Welcome</string>
    <string name="toast_decode_qr_error_msg">"Sorry, something went wrong. "</string>
    <string name="receiver">"Receiver : "</string>
    <string name="thanks_msg">Thanks for using QR Money</string>
    <string name="title_activity_ask_money">AskMoneyActivity</string>
    <string name="input_amount_msg">Please enter a valid amount.</string>
    <string name="no_sufficient_bal_msg">You don\'t have sufficient balance.</string>
    <string name="enter_verification_number_msg">Enter the Verification Code.</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="verification_msg">We\'ve sent you an SMS with an activation code to your phone</string>
    <string name="verification_code_hint">Enter Verification Code</string>
    <string name="go_to_verification_btn_text">NEXT</string>
    <string name="verify_button">VERIFY NUMBER</string>
    <string name="register">REGISTER!</string>
    <string name="calorie_tv_message">Calories in take for today :</string>
    <string name="Feed">Recents</string>
    <string name="hint_username">Username</string>
    <string name="calories_left_for_consumption">Calories you can consume -</string>
    <string name="hint_weight">Weight</string>
</resources>
